--- a/ej01.ipynb
+++ b/ej01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ej02 - i\n",
+    "\n",
+    "def F(x):\n",
+    "    return np.array([\n",
+    "        3*x[0]**2 - x[1]**2,\n",
+    "        3*x[0]*x[1]**2 - x[0]**3 - 1\n",
+    "    ])\n",
+    "\n",
+    "def J(x):\n",
+    "    return np.array([\n",
+    "        [6*x[0], -2*x[1]],\n",
+    "        [3*x[1]**2 - 3*x[0]**2, 6*x[0]*x[1]]\n",
+    "    ])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ej02 - ii\n",
+    "def F(x):\n",
+    "    return np.array([\n",
+    "        12*x[0] - 3*x[1]**2 - 4*x[2] - 7.17,\n",
+    "        x[0] + 10*x[1] - x[2] - 11.54,\n",
+    "        x[1]**3 - 7*x[2]**3 - 7.631\n",
+    "    ])\n",
+    "\n",
+    "def J(x):\n",
+    "    return np.array([\n",
+    "        [12, -6*x[1], -4],\n",
+    "        [1, 10, -1],\n",
+    "        [0, 3*x[1]**2, -21*x[2]**2]\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,23 +117,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "#ej02 del lab02\n",
     "# Para mostrar más de una sola solución\n",
+    "# i\n",
     "x0_list = [\n",
-    "    np.array([0.1, 0.1, 0.1]),\n",
-    "    np.array([-0.1, -0.1, -0.1]),\n",
-    "    np.array([1.0, 1.0, 1.0]),\n",
-    "    np.array([-1.0, -1.0, -1.0])\n",
+    "    np.array([1.0, 1.0]),\n",
+    "    np.array([1.0, -1.0]),\n",
+    "    np.array([-1.0, 1.0]),\n",
+    "    np.array([-1.0, -1.0]),\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ii\n",
+    "x0_list = [\n",
+    "    np.array([0.1, 0.1, 0.1]),\n",
+    "    np.array([1.0, 1.0, 1.0]),\n",
+    "    np.array([-0.5, 0.5, -0.5])\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -100,162 +158,56 @@
       "Solución 1:\n",
       "Iteraciones:\n",
       "Iteración 0: [0.1 0.1 0.1]\n",
-      "Iteración 1: [ 0.50021878  0.01936074 -0.52571524]\n",
-      "Iteración 2: [ 0.5000146   0.00156923 -0.52363585]\n",
-      "Iteración 3: [ 5.00000111e-01  1.21137647e-05 -5.23599062e-01]\n",
-      "Iteración 4: [ 5.00000000e-01  7.33112329e-10 -5.23598776e-01]\n",
-      "Iteración 5: [ 5.00000000e-01  3.19610595e-19 -5.23598776e-01]\n",
+      "Iteración 1: [-11.62850833  -1.33024795 -36.4709878 ]\n",
+      "Iteración 2: [ -7.60586337  -0.51683314 -24.31419474]\n",
+      "Iteración 3: [ -4.87800431   0.02079501 -16.21005425]\n",
+      "Iteración 4: [ -3.00142159   0.37333359 -10.80808566]\n",
+      "Iteración 5: [-1.72706356  0.60586232 -7.20844034]\n",
+      "Iteración 6: [-0.86824824  0.7595987  -4.81226119]\n",
+      "Iteración 7: [-0.29389233  0.86112893 -3.22260299]\n",
+      "Iteración 8: [ 0.08488139  0.92753316 -2.179787  ]\n",
+      "Iteración 9: [ 0.32514556  0.96942664 -1.52058802]\n",
+      "Iteración 10: [ 0.4602389   0.99290028 -1.15075828]\n",
+      "Iteración 11: [ 0.51340659  1.00211944 -1.005399  ]\n",
+      "Iteración 12: [ 0.52192108  1.00359427 -0.98213624]\n",
+      "Iteración 13: [ 0.52212806  1.00363011 -0.98157087]\n",
+      "Iteración 14: [ 0.52212818  1.00363013 -0.98157054]\n",
+      "Iteración 15: [ 0.52212818  1.00363013 -0.98157054]\n",
       "Solución aproximada:\n",
-      "[ 5.00000000e-01  3.19610595e-19 -5.23598776e-01]\n",
+      "[ 0.52212818  1.00363013 -0.98157054]\n",
       "\n",
       "Solución 2:\n",
       "Iteraciones:\n",
-      "Iteración 0: [-0.1 -0.1 -0.1]\n",
-      "Iteración 1: [  0.47071482 -87.04669398  -0.96032164]\n",
-      "Iteración 2: [ 26.48256392 -43.57513818  -0.47359878]\n",
-      "Iteración 3: [  3.45761329 -21.7640789   -0.47359878]\n",
-      "Iteración 4: [ -1.36662571 -10.92611233  -0.47359878]\n",
-      "Iteración 5: [-1.95184088 -5.51561133 -0.01265122]\n",
-      "Iteración 6: [ -2.73765269  -2.788052   -25.26972556]\n",
-      "Iteración 7: [ -3.84778188  -1.43921285 -42.01906552]\n",
-      "Iteración 8: [ -6.53567711  -0.93465879 -37.66346554]\n",
-      "Iteración 9: [-5.53821831 -0.97006692 -7.19991045]\n",
-      "Iteración 10: [-10.50509971  -0.91705808 -59.97065795]\n",
-      "Iteración 11: [ -9.30314977  -0.93023664 -28.10413299]\n",
-      "Iteración 12: [ -7.18321283  -1.05441752 -53.00372407]\n",
-      "Iteración 13: [ -8.02019358  -0.82772665 -25.21741405]\n",
-      "Iteración 14: [ -8.79215894  -0.82077443 -60.95012345]\n",
-      "Iteración 15: [-7.89933492 -0.69123432 58.87259101]\n",
-      "Iteración 16: [ -0.42020488   1.64109787 265.18989609]\n",
-      "Iteración 17: [341.9826637   -0.51094565 -14.61924754]\n",
-      "Iteración 18: [167.46688173  36.00022013  -0.47359878]\n",
-      "Iteración 19: [nan nan nan]\n",
-      "Iteración 20: [nan nan nan]\n",
-      "Iteración 21: [nan nan nan]\n",
-      "Iteración 22: [nan nan nan]\n",
-      "Iteración 23: [nan nan nan]\n",
-      "Iteración 24: [nan nan nan]\n",
-      "Iteración 25: [nan nan nan]\n",
-      "Iteración 26: [nan nan nan]\n",
-      "Iteración 27: [nan nan nan]\n",
-      "Iteración 28: [nan nan nan]\n",
-      "Iteración 29: [nan nan nan]\n",
-      "Iteración 30: [nan nan nan]\n",
-      "Iteración 31: [nan nan nan]\n",
-      "Iteración 32: [nan nan nan]\n",
-      "Iteración 33: [nan nan nan]\n",
-      "Iteración 34: [nan nan nan]\n",
-      "Iteración 35: [nan nan nan]\n",
-      "Iteración 36: [nan nan nan]\n",
-      "Iteración 37: [nan nan nan]\n",
-      "Iteración 38: [nan nan nan]\n",
-      "Iteración 39: [nan nan nan]\n",
-      "Iteración 40: [nan nan nan]\n",
-      "Iteración 41: [nan nan nan]\n",
-      "Iteración 42: [nan nan nan]\n",
-      "Iteración 43: [nan nan nan]\n",
-      "Iteración 44: [nan nan nan]\n",
-      "Iteración 45: [nan nan nan]\n",
-      "Iteración 46: [nan nan nan]\n",
-      "Iteración 47: [nan nan nan]\n",
-      "Iteración 48: [nan nan nan]\n",
-      "Iteración 49: [nan nan nan]\n",
-      "Iteración 50: [nan nan nan]\n",
-      "Iteración 51: [nan nan nan]\n",
-      "Iteración 52: [nan nan nan]\n",
-      "Iteración 53: [nan nan nan]\n",
-      "Iteración 54: [nan nan nan]\n",
-      "Iteración 55: [nan nan nan]\n",
-      "Iteración 56: [nan nan nan]\n",
-      "Iteración 57: [nan nan nan]\n",
-      "Iteración 58: [nan nan nan]\n",
-      "Iteración 59: [nan nan nan]\n",
-      "Iteración 60: [nan nan nan]\n",
-      "Iteración 61: [nan nan nan]\n",
-      "Iteración 62: [nan nan nan]\n",
-      "Iteración 63: [nan nan nan]\n",
-      "Iteración 64: [nan nan nan]\n",
-      "Iteración 65: [nan nan nan]\n",
-      "Iteración 66: [nan nan nan]\n",
-      "Iteración 67: [nan nan nan]\n",
-      "Iteración 68: [nan nan nan]\n",
-      "Iteración 69: [nan nan nan]\n",
-      "Iteración 70: [nan nan nan]\n",
-      "Iteración 71: [nan nan nan]\n",
-      "Iteración 72: [nan nan nan]\n",
-      "Iteración 73: [nan nan nan]\n",
-      "Iteración 74: [nan nan nan]\n",
-      "Iteración 75: [nan nan nan]\n",
-      "Iteración 76: [nan nan nan]\n",
-      "Iteración 77: [nan nan nan]\n",
-      "Iteración 78: [nan nan nan]\n",
-      "Iteración 79: [nan nan nan]\n",
-      "Iteración 80: [nan nan nan]\n",
-      "Iteración 81: [nan nan nan]\n",
-      "Iteración 82: [nan nan nan]\n",
-      "Iteración 83: [nan nan nan]\n",
-      "Iteración 84: [nan nan nan]\n",
-      "Iteración 85: [nan nan nan]\n",
-      "Iteración 86: [nan nan nan]\n",
-      "Iteración 87: [nan nan nan]\n",
-      "Iteración 88: [nan nan nan]\n",
-      "Iteración 89: [nan nan nan]\n",
-      "Iteración 90: [nan nan nan]\n",
-      "Iteración 91: [nan nan nan]\n",
-      "Iteración 92: [nan nan nan]\n",
-      "Iteración 93: [nan nan nan]\n",
-      "Iteración 94: [nan nan nan]\n",
-      "Iteración 95: [nan nan nan]\n",
-      "Iteración 96: [nan nan nan]\n",
-      "Iteración 97: [nan nan nan]\n",
-      "Iteración 98: [nan nan nan]\n",
-      "Iteración 99: [nan nan nan]\n",
-      "Iteración 100: [nan nan nan]\n",
+      "Iteración 0: [1. 1. 1.]\n",
+      "Iteración 1: [1.01322807 1.08903966 0.36362471]\n",
+      "Iteración 2: [ 0.05286112  0.9234257  -2.25288191]\n",
+      "Iteración 3: [ 0.30891493  0.96659923 -1.56509279]\n",
+      "Iteración 4: [ 0.45216978  0.99150004 -1.17282987]\n",
+      "Iteración 5: [ 0.51125729  1.00174705 -1.01127223]\n",
+      "Iteración 6: [ 0.52180892  1.00357485 -0.9824426 ]\n",
+      "Iteración 7: [ 0.52212789  1.00363008 -0.98157132]\n",
+      "Iteración 8: [ 0.52212818  1.00363013 -0.98157054]\n",
+      "Iteración 9: [ 0.52212818  1.00363013 -0.98157054]\n",
       "Solución aproximada:\n",
-      "[nan nan nan]\n",
+      "[ 0.52212818  1.00363013 -0.98157054]\n",
       "\n",
       "Solución 3:\n",
       "Iteraciones:\n",
-      "Iteración 0: [1. 1. 1.]\n",
-      "Iteración 1: [ 0.92608084  0.46082509 -0.52618474]\n",
-      "Iteración 2: [ 0.50214283  0.18744719 -0.51584919]\n",
-      "Iteración 3: [ 0.50048495  0.06110138 -0.5250313 ]\n",
-      "Iteración 4: [ 0.50010722  0.01158205 -0.52387256]\n",
-      "Iteración 5: [ 0.50000551  0.00060072 -0.52361298]\n",
-      "Iteración 6: [ 5.00000016e-01  1.79231047e-06 -5.23598818e-01]\n",
-      "Iteración 7: [ 5.00000000e-01  1.60503122e-11 -5.23598776e-01]\n",
-      "Iteración 8: [ 5.00000000e-01 -6.35194509e-18 -5.23598776e-01]\n",
+      "Iteración 0: [-0.5  0.5 -0.5]\n",
+      "Iteración 1: [ 0.21020242  0.96329347 -1.69686284]\n",
+      "Iteración 2: [ 0.42711088  0.98713251 -1.24156406]\n",
+      "Iteración 3: [ 0.5034783   1.000399   -1.03253172]\n",
+      "Iteración 4: [ 0.52121426  1.00347187 -0.984067  ]\n",
+      "Iteración 5: [ 0.52212584  1.00362972 -0.98157693]\n",
+      "Iteración 6: [ 0.52212818  1.00363013 -0.98157054]\n",
+      "Iteración 7: [ 0.52212818  1.00363013 -0.98157054]\n",
       "Solución aproximada:\n",
-      "[ 5.00000000e-01 -6.35194509e-18 -5.23598776e-01]\n",
-      "\n",
-      "Solución 4:\n",
-      "Iteraciones:\n",
-      "Iteración 0: [-1. -1. -1.]\n",
-      "Iteración 1: [ 0.66704349 -0.53800938 -0.32014713]\n",
-      "Iteración 2: [ 0.4928348  -0.32987484 -0.51664357]\n",
-      "Iteración 3: [ 0.4978656  -0.23676147 -0.51797611]\n",
-      "Iteración 4: [ 0.49815898 -0.20504807 -0.5187377 ]\n",
-      "Iteración 5: [ 0.49820326 -0.20025785 -0.51885096]\n",
-      "Iteración 6: [ 0.49820431 -0.20014333 -0.51885367]\n",
-      "Iteración 7: [ 0.49820431 -0.20014326 -0.51885367]\n",
-      "Solución aproximada:\n",
-      "[ 0.49820431 -0.20014326 -0.51885367]\n",
+      "[ 0.52212818  1.00363013 -0.98157054]\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\eunic\\AppData\\Local\\Temp\\ipykernel_19280\\1332999880.py:5: RuntimeWarning: overflow encountered in exp\n",
-      "  exp(x[0]*x[1]) + 20*x[2] + (10*pi - 3)/3\n",
-      "C:\\Users\\eunic\\AppData\\Local\\Temp\\ipykernel_19280\\1332999880.py:13: RuntimeWarning: overflow encountered in exp\n",
-      "  [x[1]*exp(x[0]*x[1]), x[0]*exp(x[0]*x[1]), 20]\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "tol = 1e-7 #tol\n",
     "maxIter = 100 #maximo de iteraciones\n",
     "\n",
